--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,18 @@ html {
 }
 
 body {
-	background: $white;
+	//background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+}
+
+div.body {
+  background-image: url('http://wallpapercave.com/wp/xqJL4ki.jpg');
+  height: 100vh;
+  width: 100vh;
+  position: fixed;
+  top: 0;
+  z-index: -10;
 }
 
 .container {
